--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,81 @@
+/* GENERAL */
 body {
-  padding: 50px;
+  padding: 0;
+  margin: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  width: 100%;
+  height: 100vh;
+}
+
+h1 {
+  margin: 0;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
+  text-decoration: none;
+}
+
+/* HOME */
+#home-container {
+  background-image: url("/images/cinema.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+}
+
+#home-container h1{
+  color: white;
+  font-size: 5rem;
+}
+
+#home-container a{
+  padding: .5rem 1rem;
+  background-color: white;
+  border-radius: 15px;
+}
+
+.main-container {
+  max-width: 400px;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+}
+
+.logo-container {
+  display: flex;
+  align-items: flex-end;
+  gap: 20px;
+  justify-content: left;
+}
+
+/* MOVIES */
+
+#movies-container {
+  padding: 2rem;
+  background-color: rgba(255, 241, 87, 0.319);
+}
+
+.cards-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
+  margin-top: 40px;
+}
+
+.cards-container .card-item {
+  width: 350px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 2px 4px 5px rgb(255, 251, 0);
+}
+
+.cards-container .card-item a {
+  text-decoration: underline;
 }
