--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,6 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div id="home-container">
+    <div class="main-container">
+        <h1>Cinema Canary</h1>
+        <a href="/movies">Check the movies!</a>
+    </div>
+</div>
