--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -1,7 +1,7 @@
 <div id="movies-container">
   <div class="logo-container">
     <h1>Cinema Canary</h1>
-    <img width="50px" src="/images/canary.png" alt="" />
+    <img width="50px" src="/images/canary.png" alt="canary bird" />
   </div>
   <p>Click on the movie to check the showtimes!</p>
   <div class="cards-container">
