--- a/views/movie.hbs
+++ b/views/movie.hbs
@@ -3,7 +3,7 @@
     <img src={{this.movie.image}} alt="{{this.movie.title}} poster" />
   </div>
   <div class="movie-text-container">
-    <a href="/">Go back</a>
+    <a href="/movies">Go back</a>
     <h1>{{this.movie.title}}</h1>
     <h3>{{this.movie.director}}</h3>
     <h4>Stars</h4>
